--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-
 body {
     display: flex;
     justify-content: center;
@@ -6,14 +5,15 @@ body {
     height: 100vh;
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-    display: flex;
     overflow: hidden;
 }
 
 .chat-window {
+    display: flex;
+    flex-direction: column;
     width: 500px;
     height: 600px;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     border: 2px solid #ccc;
     padding: 10px;
     border-radius: 5px;
@@ -35,29 +35,40 @@ body {
 }
 
 .chat-area {
-    flex: 1;
+    flex-grow: 1;
     overflow-y: auto;
     padding: 10px 0;
-    border-bottom: 1px solid #ddd;
+    margin-bottom: 10px;
     font-size: 14px;
 }
 
 .notification {
-    color: blue;
+    color: rgb(100, 100, 255);
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .message {
     margin-top: 5px;
+    display: flex;
 }
 
 .username {
+    width: 100px;
     font-weight: bold;
+}
+
+.messageContent {
+    flex-grow: 1;
 }
 
 #userInput {
     resize: none;
-    width: 99%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: auto;
-    margin-bottom: 0;
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 14px;
 }
