--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 500px;
+    max-width: 100%;
     height: 600px;
     background-color: #ffffff;
     border: 2px solid #ccc;
@@ -40,6 +41,8 @@ body {
     padding: 10px 0;
     margin-bottom: 10px;
     font-size: 14px;
+    display: flex;
+    flex-direction: column;
 }
 
 .notification {
@@ -51,19 +54,52 @@ body {
 .message {
     margin-top: 5px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    width: 100%;
 }
 
 .username {
-    min-width: 60px;
+    width: 60px;
     font-weight: bold;
+    flex-shrink: 0;
 }
 
 .messageContent {
     flex-grow: 1;
     word-wrap: break-word;
+    overflow-wrap: anywhere;
 }
 
+/* Typing Indicator Styles */
+.dot {
+    height: 8px;
+    width: 8px;
+    margin-right: 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    animation: blink 1.4s infinite both;
+}
+
+.dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0.2;
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.2;
+    }
+}
 
 #userInput {
     resize: none;
